# MCU

./: CMakeLists.txt
Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
STM32Cube/: CMakeLists.txt
STM32Cube/CMSIS/: CMakeLists.txt
STM32Cube/HAL_Driver/: CMakeLists.txt
STM32Cube/Linker/: STM32F103C4Tx_FLASH.ld
STM32Cube/STM32F1xx_HAL_Driver/: CMakeLists.txt
STM32Cube/Startup/: CMakeLists.txt
User/: CMakeLists.txt
User/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  usart.c
cmake/: stm32.cmake  toolchain.cmake
